# pytest-gcs

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
pytest_gcs/: __init__.py  config.py  plugin.py
pytest_gcs/executor/: __init__.py  process.py
pytest_gcs/factories/: client.py  proc.py
tests/: conftest.py  test_gcs.py
