[project]
name = "pytest-gcs"
version = "0.0.1"
description = "GCS fixtures and fixture factories for Pytest."
readme = "README.md"
keywords = ["tests", "pytest", "fixture", "gcs"]
license = {file = "LICENSE"}
authors = [
    {name = "Sam Pegler", email = "sam@sampegler.co.uk"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
]
dependencies = [
    "pytest >= 6.2",
    "google-cloud-storage",
    "mirakuru",
    "port-for",
]
requires-python = ">= 3.8"

[project.urls]
"Source" = "https://github.com/Poogles/pytest-gcs"
"Bug Tracker" = "https://github.com/Poogles/pytest-gcs/issues"

[project.entry-points."pytest11"]
pytest_redis = "pytest_gcs.plugin"
